hphp/hack/test/typecheck/xhp/readonly_xhp_interaction.php.exp
File "readonly_xhp_interaction.php", line 11, characters 24-25:
Readonly values cannot be written to xhp attributes at this time. (Parsing[1002])
